package ca.levio.recruitment.domain.interview;

public enum InterviewRequestStatus {
    PENDING,
    ACCEPTED,
    REJECTED,
    REJECTED_BY_RECRUITER,
    ASSIGNED,
}
