package ca.levio.recruitment.domain.technicaladvisor;

public enum LevelOfExpertise {
    JUNIOR,
    INTERMEDIATE,
    SENIOR,
    SENIOR_PLUS,
    EXPERT
}
